feat: perfected the stripe payment and others
