# server/docs/swagger.json
@@ -652,7 +652,7 @@
                 }
             }
         },
-        "/auctions/{auctionID}/create-checkout-session": {
+        "/auctions/{auctionID}/stripe/create-checkout-session": {
             "post": {
                 "security": [
                     {
@@ -674,7 +674,7 @@
                     {
                         "type": "string",
                         "description": "ID of the auction to create a checkout session for",
-                        "name": "auction_id",
+                        "name": "auctionID",
                         "in": "path",
                         "required": true
                     }
@@ -860,6 +860,67 @@
                 "responses": {
                     "200": {
                         "description": "Logout successful",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/payments/{orderId}": {
+            "get": {
+                "security": [
+                    {
+                        "jwtCookieAuth": []
+                    }
+                ],
+                "description": "Get a Payment by Order ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payments"
+                ],
+                "summary": "Get a Payment by Order ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Order ID",
+                        "name": "orderId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Payment retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_puremike_online_auction_api_internal_models.Payment"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request - invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - user not authenticated",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found - payment not found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error - failed to retrieve payment",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -1184,6 +1245,10 @@
         "github_com_puremike_online_auction_api_internal_models.Auction": {
             "type": "object",
             "properties": {
+                "category": {
+                    "description": "\"mobile\", \"pc\" \"accessories\"",
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1269,6 +1334,7 @@
         "github_com_puremike_online_auction_api_internal_models.CreateAuctionRequest": {
             "type": "object",
             "required": [
+                "category",
                 "description",
                 "end_time",
                 "start_time",
@@ -1277,6 +1343,14 @@
                 "type"
             ],
             "properties": {
+                "category": {
+                    "type": "string",
+                    "enum": [
+                        "mobile",
+                        "pc",
+                        "accessories"
+                    ]
+                },
                 "description": {
                     "type": "string"
                 },
@@ -1309,6 +1383,9 @@
         "github_com_puremike_online_auction_api_internal_models.CreateAuctionResponse": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1422,6 +1499,39 @@
                     "type": "string"
                 },
                 "old_password": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_puremike_online_auction_api_internal_models.Payment": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "auction_id": {
+                    "type": "string"
+                },
+                "buyer_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "string"
+                },
+                "session_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "pending, completed, failed",
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
